--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+/public/images/*.png
+/public/images/*.jpg
+/public/images/*.jpeg
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
